remove spring-native

--- a/README.adoc
+++ b/README.adoc
@@ -95,7 +95,7 @@ In a terminal, make sure you are in `springboot-caching-neo4j` root folder
 ./docker-build.sh
 ----
 +
-** Native
+** Native (it's not implemented yet)
 +
 [source]
 ----
@@ -254,21 +254,3 @@ To remove the Docker image created by this project, go to a terminal and, inside
 * https://docs.spring.io/spring-boot/docs/current/reference/html/spring-boot-features.html#boot-features-caching
 * https://github.com/spring-projects/spring-data-neo4j
 * https://neo4j.com/developer/spring-data-neo4j/
-
-== Issues
-
-* Unable to run `restaurant-api` tests as **Mockito** is still not supported in AOT. See `spring-native` issues https://github.com/spring-projects-experimental/spring-native/issues/1343[#1343] and https://github.com/spring-projects-experimental/spring-native/issues/1063[#1063]
-
-* Unable to build Docker native image. It's throwing the following error
-+
-[source]
-----
-[INFO] -------------------------------------------------------------
-[ERROR] COMPILATION ERROR :
-[INFO] -------------------------------------------------------------
-[ERROR] /springboot-caching-neo4j/restaurant-api/target/generated-runtime-sources/spring-aot/src/main/java/org/springframework/cache/annotation/ContextBootstrapInitializer.java:[24,56] cannot find symbol
-  symbol:   method setConfigurers(java.lang.Object)
-  location: variable bean of type org.springframework.cache.jcache.config.ProxyJCacheConfiguration
-[INFO] 1 error
-[INFO] -------------------------------------------------------------
-----
