--- a/README.adoc
+++ b/README.adoc
@@ -8,7 +8,7 @@ The goal of this project is to explore how caching works. For it, we are going t
 +
 `Spring Boot` Web Java application that has endpoints to manage restaurants, cities (where the restaurants are located in) and dishes that restaurants have. Data is stored in `Neo4j` and caching handled by `Caffeine` or `Redis`.
 +
-image::documentation/restaurant-api-swagger.png[]
+image::documentation/restaurant-api-swagger.jpeg[]
 
 == Caching
 
@@ -34,7 +34,7 @@ By the way, we have implemented more advanced caching logic as the one presented
 
 == Prerequisites
 
-* https://www.oracle.com/java/technologies/downloads/#java11[`Java 11+`]
+* https://www.oracle.com/java/technologies/downloads/#java17[`Java 17+`]
 * https://www.docker.com/[`Docker`]
 * https://docs.docker.com/compose/install/[`Docker-Compose`]
 * https://stedolan.github.io/jq[`jq`]
@@ -139,7 +139,7 @@ docker run --rm --name restaurant-api -p 8080:8080 \
 |Application |URL
 
 |restaurant-api
-|http://localhost:8080/swagger-ui.html
+|http://localhost:8080/swagger-ui/index.html
 |===
 
 == Simulation
@@ -188,13 +188,13 @@ curl -s http://localhost:8080/actuator/prometheus | grep cacheManager
 +
 `Neo4j` UI can be accessed at http://localhost:7474/browser
 +
-image::documentation/neo4j-ui.png[]
+image::documentation/neo4j-ui.jpeg[]
 
 * **redis-commander**
 +
 `redis-commander` UI can be accessed at http://localhost:8081
 +
-image::documentation/redis-commander-ui.png[]
+image::documentation/redis-commander-ui.jpeg[]
 
 == Shutdown
 
