project upgrade - upgrade to spring-boot 3.0.2; - upgrade to springdoc-openapi 2.0.2; - upgrade to testcontainers 1.17.6; - upgrade to neo4j docker image 5.5.0; - upgrade to redis docker image 7.0.8.

--- a/README.adoc
+++ b/README.adoc
@@ -188,6 +188,8 @@ curl -s http://localhost:8080/actuator/prometheus | grep cacheManager
 +
 `Neo4j` UI can be accessed at http://localhost:7474/browser
 +
+No authentication is needed, just click `Connect` button
++
 image::documentation/neo4j-ui.jpeg[]
 
 * **redis-commander**
